# gregs-dental-software

./: .env.example  .envrc  .gitignore  DEV.md  README.md  ambient_notes_plan.md  cost_model.md  docker-compose.yml  imaging_bridge_plan.md  longterm_build_plan.md  no_show_risk_plan.md  offline_support_plan.md  package.json  phase1_build_plan.md  phase2_build_plan.md  pnpm-lock.yaml  post_phase1_plan.md  turbo.json
apps/api/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  run_reminder_worker.py
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_schema.py  0002_patients.py  0003_intake_forms.py  0004_intake_forms_add_deleted_at.py  0005_patient_feedback.py  0006_patient_intake_fields.py  0007_patient_last_xray_date.py  0008_patient_dental_symptoms.py  0009_patient_dental_history.py  0010_appointments.py  0011_patient_search_indexes.py  0012_appointment_reminders.py  0013_reminder_delivery_fields.py  0014_insurance_plans.py  0014_practice_reminder_hours.py  0015_eligibility_checks.py  0016_medical_history_versions.py  0017_clinical_notes.py  0018_tooth_conditions.py  0019_treatment_plans.py  0020_perio_charting.py  0021_no_show_risk.py  0022_treatment_plan_item_urgency.py  0023_tooth_condition_surfaces.py  0024_tooth_condition_vertical_zone.py  0025_appointment_procedures.py  0025_patient_portal_accounts.py  0026_practice_fee_schedule.py  0027_eligibility_checks.py  0028_contracted_fee_schedule.py  0029_eligibility_copay_fields.py  0030_full_cdt_catalog_seed.py  0031_copay_calculations.py  0032_claims.py  0033_era_ingest.py  0034_ledger_entries.py  0035_default_billing_ledger.py  0036_claims_insurance_reviewed_at.py  0037_claim_recovery.py
apps/api/app/: README.md  main.py
apps/api/app/core/: config.py  db.py  encryption.py  features.py  redis.py  sqs.py  ssm.py
apps/api/app/data/: cdt_catalog.py
apps/api/app/middleware/: audit.py  auth.py  idempotency.py  security.py
apps/api/app/models/: __init__.py  appointment.py  appointment_procedure.py  appointment_reminder.py  appointment_type.py  audit_log.py  base.py  claim.py  clinical_note.py  contracted_fee_schedule.py  copay_calculation.py  eligibility_check.py  era_remittance.py  fee_schedule.py  insurance_plan.py  intake_form.py  ledger_entry.py  medical_history_version.py  operatory.py  patient.py  patient_insurance.py  practice.py  (+6 more)
apps/api/scripts/: seed_e2e_env.py  seed_insurance_plans.py  stedi_claim_smoke.py  stedi_eligibility_smoke.py  stedi_era_smoke.py
apps/api/tests/: conftest.py  test_health.py
apps/whisper/: Dockerfile  pyproject.toml
apps/whisper/app/: main.py  transcriber.py
apps/whisper/tests/: test_main.py  test_transcriber.py
(+408 files in other folders)
