[project]
name = "dental-api"
version = "0.1.0"
description = "Dental PMS — FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.34.0",
    "pydantic[email]>=2.10.4",
    "pydantic-settings>=2.7.1",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "greenlet>=3.0.0",
    "redis>=5.2.1",
    "boto3>=1.35.91",
    "python-dotenv>=1.0.1",
    "cryptography>=44.0.0",
    "httpx>=0.28.1",
    "python-jose[cryptography]>=3.3.0",
    "twilio>=9.0.0",
    "python-multipart>=0.0.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.1",
    "datamodel-code-generator>=0.26.4",
    "ruff>=0.9.1",
    "mypy>=1.14.1",
]

[tool.uv]
index-url = "https://pypi.org/simple"
dev-dependencies = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "datamodel-code-generator>=0.26.4",
    "ruff>=0.9.1",
    "mypy>=1.14.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["app/schemas/generated.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = []

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "app.schemas.generated"
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
# All async code (fixtures AND test functions) shares one session-scoped event loop.
# This keeps asyncpg connection pools usable across the full test session.
# Correctness is preserved via explicit DB truncation between tests (see integration/conftest.py).
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
# Run only unit tests by default; use `pytest -m integration` for integration tests.
addopts = "-m 'not integration'"
markers = [
    "integration: marks tests that require a real Postgres + Redis (deselected by default)",
]
